--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuex-orm/core": "^0.32.5",
+    "@vuex-orm/plugin-graphql": "^1.0.0-rc.36",
+    "body-parser": "^1.19.0",
+    "chalk": "^2.4.2",
     "core-js": "^3.3.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "massive": "^6.1.1",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
@@ -24,5 +35,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "main": "server/server.js",
+  "proxy": "http://localhost:8081"
 }
