--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@vuex-orm/core": "^0.32.5",
     "@vuex-orm/plugin-graphql": "^1.0.0-rc.36",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
+    "cookie-session": "^1.3.3",
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "ky": "^0.15.0",
     "lodash": "^4.17.15",
     "massive": "^6.1.1",
     "node-sass": "^4.12.0",
@@ -36,6 +40,5 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   },
-  "main": "server/server.js",
-  "proxy": "http://localhost:8081"
+  "main": "server/server.js"
 }
