--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "massive": "^6.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-material-design-icons": "^4.1.0",
     "vue-router": "^3.1.3",
